--- a/src/app/pages/device-management/containers/device-management.style.css
+++ b/src/app/pages/device-management/containers/device-management.style.css
@@ -10,3 +10,8 @@
   -moz-box-shadow: inset -34px -34px 70px -80px rgba(150,150,150,1);
   box-shadow: inset -34px -34px 70px -80px rgba(150,150,150,1);
 }
+.center-spinner{
+  margin-top: 20vh;
+  margin-left: auto;
+  margin-right: auto;
+}
