--- a/src/app/pages/device-management/containers/device-management.style.css
+++ b/src/app/pages/device-management/containers/device-management.style.css
@@ -1,17 +1,29 @@
 
 #nodebox {
-  -webkit-box-shadow: inset -34px -34px 70px -71px rgba(209,209,209,0.6);
-  -moz-box-shadow: inset -34px -34px 70px -71px rgba(209,209,209,0.6);
-  box-shadow: inset -34px -34px 70px -71px rgba(209,209,209,0.6);
-  border-right: 1px solid rgba(24,28,33,0.06);
+  -webkit-box-shadow: inset -34px -34px 70px -71px rgba(209, 209, 209, 0.6);
+  -moz-box-shadow: inset -34px -34px 70px -71px rgba(209, 209, 209, 0.6);
+  box-shadow: inset -34px -34px 70px -71px rgba(209, 209, 209, 0.6);
+  border-right: 1px solid rgba(24, 28, 33, 0.06);
 }
+
 #nodebox:hover {
-  -webkit-box-shadow: inset -34px -34px 70px -80px rgba(150,150,150,1);
-  -moz-box-shadow: inset -34px -34px 70px -80px rgba(150,150,150,1);
-  box-shadow: inset -34px -34px 70px -80px rgba(150,150,150,1);
+  -webkit-box-shadow: inset -34px -34px 70px -80px rgba(150, 150, 150, 1);
+  -moz-box-shadow: inset -34px -34px 70px -80px rgba(150, 150, 150, 1);
+  box-shadow: inset -34px -34px 70px -80px rgba(150, 150, 150, 1);
 }
-.center-spinner{
-  margin-top: 20vh;
-  margin-left: auto;
-  margin-right: auto;
+
+.center-spinner {
+  text-align: center;
+  margin: auto;
+  margin-top: 15%;
+}
+
+.pagination {
+  margin-right: 0px !important;
+  margin-left: 0px !important;
+  margin-bottom: 0px !important;
+}
+.search {
+  height: 40px;
+  font-size: 25px;
 }
